Fix spacing issues

--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,7 @@ body {
     font-family: 'Mulish', sans-serif;
     height: 100vh;
     width: 100vw;
+	min-height: 750px;
 }
 
 .header {
